--- a/12axes/index.html
+++ b/12axes/index.html
@@ -24,28 +24,28 @@
 <h2>What are the eleven axes and their values?</h2>
     <p>There are eleven independent axes, where each has two opposing values assigned to them, each grouped into a category. They are:</p>
 
-    <br><p class="value-description"><b style="color:#FE3F5F;">Care / Harm</b> [Governmental]<br/>
-        .</p>
+    <br><p class="value-description"><b style="color:#FE3F5F;">Care / Harm</b> <br/>
+Those who score higher in Care prioritize cherishing and protecting others. It embraces virtues like kindness, gentleness, and nurturance. They tend to be more Leftist.</p>
 
-    <br><p class="value-description"><b style="color:#FE7530;">Fairness / Inequity</b> [Governmental]<br/>
-        .</p>
+    <br><p class="value-description"><b style="color:#FE7530;">Fairness / Inequity</b> <br/>
+Those who score higher in Fairness prioritize equal treatment under the law, making society more equal, and a equitable distribution of wealth and social justice. It embraces virtues like justice, cooperation, and fairness. They tend to be more Leftist.</p>
 
-    <br><p class="value-description"><b style="color:#FEDE3F;">Liberty / Oppression</b> [Diplomatic]<br/>
-        .</p>
+    <br><p class="value-description"><b style="color:#FEDE3F;">Liberty / Oppression</b> <br/>
+Those who score higher in Liberty prioritize freedom, and resent authorities that restrict liberty. It embraces virtues like freedom, and self-determination. They tend to be more Libertarian.</p>
 
-    <br><p class="value-description"><b style="color:#7EFE3E;">In-group loyalty / In-group betrayal</b> [Diplomatic]<br/>
-        .</p>
+    <br><p class="value-description"><b style="color:#7EFE3E;">In-group loyalty / In-group betrayal</b> <br/>
+Those who score higher in In-group royalty prioritize standing with your group, family, nation. It embraces virtues like patriotism, community, and self-sacrifice. They tend to be more Patriotic or Tribalist.</p>
     
-    <br><p class="value-description"><b style="color:#3DFE7D;">Chastity / Degradation</b> [Diplomatic] <br/>
+    <br><p class="value-description"><b style="color:#3DFE7D;">Honor / Disgrace</b>  <br/>
         .</p>
 
-    <br><p class="value-description"><b style="color:#3EFEFE;">Divinity / Impiety</b> [Economic]<br/>
-        . </p>
+    <br><p class="value-description"><b style="color:#3EFEFE;">Divinity / Impiety</b> <br/>
+        Those who score higher in Divinity prioritize spirituality and religion. It embraces virtues like spirituality, purposefulness, and dignity. They tend to be more Religious. </p>
 
-    <br><p class="value-description"><b style="color:#3FBEFE;">Honor / Disgrace</b> [Economic]<br/>
-        . </p>
-  <br><p class="value-description"><b style="color:#7E3EFE;">Authority / Anarchy</b> [Economic]<br/>
-        . </p>
+    <br><p class="value-description"><b style="color:#3FBEFE;">Chastity / Degradation</b> <br/>
+Those who score higher in Chastity prioritize standards of "high society" and avoid behavior that is percieved as primitive, degenerate, recklessly hedonistic. It embraces virtues like purity, modesty, and cleanliness. They tend to be more Traditional. </p>
+  
+<br><p class="value-description"><b style="color:#7E3EFE;">Authority / Anarchy</b> <br/> Those who score higher in Authority prioritize submitting to laws and legitimate authority. It embraces virtues like lawfulness, followeship, and discipline. They tend to be more Authoritarian. </p>
 
     
 
