--- a/12axes/index.html
+++ b/12axes/index.html
@@ -47,6 +47,7 @@ Those who score higher in Chastity prioritize standards of "high society" and av
   
 <br><p class="value-description"><b style="color:#AE3EFE;">Authority / Anarchy</b> <br/> Those who score higher in Authority prioritize submitting to laws and legitimate authority. It embraces virtues like lawfulness, followeship, and discipline. They tend to be more Authoritarian. </p>
 
+<br><p class="value-description"><b style="color:#FE3FDE;">Efficiency / Waste</b> <br/> Those who score higher in Efficiency prioritize not wasting food and resource. It embraces virtues like frugality. They tend to be more anti-consumerist. </p>
     
 
     
