--- a/12axes/instructions.html
+++ b/12axes/instructions.html
@@ -8,11 +8,10 @@
 </head>
 <body>
 
-<h1>12Axes</h1>
+<h1>9Foundations</h1>
 <hr>
 <h2 style="text-align:center;">Instructions</h2>
 <p class="question">You will be presented with a series of statements. For each one, click the button with your opinion on it. Click one of the options below to start!</p>
-<button class="button" onclick="location.href='quiz.html';" style="background-color: #2196f3;">Proceed to Short Version (60 questions)</button> <br>
-<button class="button" onclick="location.href='longquiz.html';" style="background-color: #2196f3;">Proceed to Long Version (288 questions)</button><br>
-<button class="button" onclick="location.href='../12axes.html';" style="background-color: #f44336;">Go Back</button> <br>
+<button class="button" onclick="location.href='quiz.html';" style="background-color: #1E88DD;">Proceed to Test</button> <br>
+<button class="button" onclick="location.href='../12axes.html';" style="background-color: #DD241D;">Go Back</button> <br>
 </body>
