--- a/12axes/index.html
+++ b/12axes/index.html
@@ -2,7 +2,7 @@
 <head>
 <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:400,700" rel="stylesheet">
 <link href='style.css' rel='stylesheet' type='text/css'>
-<title>12Axes</title>
+<title>9Foundations</title>
 <link rel="icon" type="x-icon" href="../icons/12axes.png">
 <link rel="shortcut icon" type="x-icon" href="../icons/12axes.png">
 <meta charset="utf-8">
@@ -59,5 +59,3 @@ all copies or substantial portions of the Software." The included notice can be 
 
                                                                                                   </br>
 </div>
-    <br><br><button class="button" onclick="location.href='https://politicaltests.github.io/';" style="font-size:30pt;">&#128281 Main Page</button>
-</body>
