--- a/12axes/results.html
+++ b/12axes/results.html
@@ -11,7 +11,7 @@
 </script>
 
 <body>
-<h1>12Axes</h1>
+<h1>9Foundations</h1>
 <hr>
 
 <h1>Results</h1>   
@@ -91,29 +91,7 @@
     <img id="img-k2" src="value_images/globalist.png" height="128pt"/>
 </div>
     
-<h2><b>Religion: </b><span class="weight-300" id="g-label"></span></h2>
-<div class="axis">
-    <img id="img-g" src="value_images/secular.png" height="128pt"/>
-    <div class="bar g" id="bar-g"><div class="text-wrapper" id="g"></div></div>
-    <div class="bar g2" id="bar-g2"><div class="text-wrapper" id="g2"></div></div>
-    <img id="img-g2" src="value_images/religious.png" height="128pt"/>
-</div>
-    
-<h2><b>Culture: </b><span class="weight-300" id="h-label"></span></h2>
-<div class="axis">
-    <img id="img-h" src="value_images/progress.png" height="128pt"/>
-    <div class="bar h" id="bar-h"><div class="text-wrapper" id="h"></div></div>
-    <div class="bar h2" id="bar-h2"><div class="text-wrapper" id="h2"></div></div>
-    <img id="img-h2" src="value_images/tradition.png" height="128pt"/>
-</div>
 
-<h2><b>Technology: </b><span class="weight-300" id="l-label"></span></h2>
-<div class="axis">
-    <img id="img-l" src="value_images/technology.png" height="128pt"/>
-    <div class="bar l" id="bar-l"><div class="text-wrapper" id="l"></div></div>
-    <div class="bar l2" id="bar-l2"><div class="text-wrapper" id="l2"></div></div>
-    <img id="img-l2" src="value_images/bioconservative.png" height="128pt"/>
-</div>
 </div>
 <br> <br> 
 	
