--- a/12axes/results.html
+++ b/12axes/results.html
@@ -92,17 +92,20 @@
 </div>
     
 
-</div>
+   </div>
 <br> <br> 
 	
-	
+	  
  <div class="element"> 
   <h2>Closest Match: <span class="weight-300" id="ideology-label" onclick="ideologyLink()" style="color: #2222DD;text-decoration: underline"></span></h2>
   <br><p><span class="weight-300" id="ideodesc-label"></span></p><br>
 </div>	
 	
 <br><br>
-<button class="button" onclick="location.href='https://www.screenshotmachine.com/';" style="background-color: #2196f3;">
+<button class="button" onclick="location.href='https://www.screenshotmachine.com/';" style="background-color: #2196f3;"></div>
+<br> <br> 
+	
+	t
     Take Screenshot <p style="color: #FFFFFF;">(Please copy the URL first, and tick the "Full website screenshot" option.)</p></button> <br>
     
 <button class="button" onclick="location.href='../12axes.html';" style="background-color: #2196f3;">Back</button> <br>
