--- a/12axes/results.html
+++ b/12axes/results.html
@@ -444,3 +444,11 @@
         if (g2 > 20) {ctx.fillText(g2 + "%", 670, 907.5)}
         if (h2  > 20) {ctx.fillText(h2 + "%", 670, 1027.5)}
         if (i2  > 20) {ctx.fil
+ctx.fillText(document.getElementById("h-label").innerHTML, 400, 965)
+        ctx.fillText(document.getElementById("i-label").innerHTML, 400, 1085)
+        ctx.fillText(document.getElementById("j-label").innerHTML, 400, 1205)
+        ctx.fillText(document.getElementById("k-label").innerHTML, 400, 1325)
+        ctx.fillText(document.getElementById("l-label").innerHTML, 400, 1445)
+    } */
+    </script>
+</body>
